[gd_scene load_steps=2 format=3 uid="uid://bvlg732yscreh"]

[ext_resource type="Script" path="res://scenes/UI/ui.gd" id="1_n4ulp"]

[node name="UI" type="Control" node_paths=PackedStringArray("player_name_input_field", "player_list")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n4ulp")
player_name_input_field = NodePath("player_name_input_field")
player_list = NodePath("PlayerList")

[node name="join_button" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 262.0
offset_bottom = 90.0
text = "Join
"

[node name="ready_button" type="Button" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = 8.0
offset_right = 494.0
offset_bottom = 90.0
text = "Ready"

[node name="player_name_input_field" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 104.0
offset_right = 664.0
offset_bottom = 146.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 115.0
offset_right = 54.0
offset_bottom = 138.0
text = "Name"

[node name="PlayerList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 200.0
offset_right = 112.0
offset_bottom = 336.0

[connection signal="pressed" from="join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="ready_button" to="." method="_on_ready_button_pressed"]
